--- a/Talk.tex
+++ b/Talk.tex
@@ -64,15 +64,25 @@
 \frame{\titlepage}
 
 \begin{frame}[c]
-
+	\frametitle{Definitions}
 	\begin{center}
-		Knot = A smooth/piece-wise linear embedding of $S^1$ into $\RR^3$\\
+		Knot = A piece-wise (or smooth) linear embedding of $S^1$ into $\RR^3$\\
 		\p
-		\vspace{0.3in}
-		Link = A smooth/p.l. embedding of several circles into $\RR^3$
+		\vspace{0.2in}
+		Link = A p.l. (or smooth) embedding of several circles into $\RR^3$
 	\end{center}
-
+	\p
+	\begin{figure}
+		\centering
+		\includegraphics[width=6cm]{pic/kelvin_knots.jpg}
+		\caption{Illustrations of knots and links, including a trefoil knot, top left, in an 1869 paper by Lord Kelvin on his knotted vortex theory of atoms.}
+	\end{figure}
 \end{frame}
 
+\begin{frame}[c]
+\frametitle{Definitions}
+\begin{center}
+	two knots are equ
+\end{center}
 
 \end{document}
