--- a/Talk.tex
+++ b/Talk.tex
@@ -56,7 +56,7 @@
 \title{A Quick Introduction to Knots and Jones Polynomials}
 \institute{University of Manitoba}
 \author{Junyu Lu}
-\date{}
+\date{Nov 2023}
 \titlegraphic{\includegraphics[height=1cm]{pic/um.png}}
 
 \begin{document}
@@ -80,9 +80,10 @@
 \end{frame}
 
 \begin{frame}[c]
-\frametitle{Definitions}
-\begin{center}
-	two knots are equ
-\end{center}
+	\frametitle{Definitions}
+	\begin{center}
+		two knots are equ
+	\end{center}
+\end{frame}
 
 \end{document}
