--- a/Talk.tex
+++ b/Talk.tex
@@ -66,10 +66,10 @@
 \begin{frame}[c]
 	\frametitle{Definitions}
 	\begin{center}
-		Knot = A piece-wise (or smooth) linear embedding of $S^1$ into $\RR^3$\\
+		Knot = A piece-wise (or smooth) linear embedding of $S^1$ into $\RR^3$ or $S^3$\\
 		\p
 		\vspace{0.2in}
-		Link = A p.l. (or smooth) embedding of several circles into $\RR^3$
+		Link = A p.l. (or smooth) embedding of disjoint circles into $\RR^3$ or $S^3$
 	\end{center}
 	\p
 	\begin{figure}
@@ -80,10 +80,156 @@
 \end{frame}
 
 \begin{frame}[c]
-	\frametitle{Definitions}
+	\frametitle{Knot Equivalence}
 	\begin{center}
-		two knots are equ
+		Two knots are equivalent if \\
+		or more rigorously, ambient isotopy
 	\end{center}
 \end{frame}
+
+\begin{frame}
+	\frametitle{Reidemeister Moves}
+
+
+
+\end{frame}
+
+\begin{frame}
+	\frametitle{Knot Complements}
+
+	A theorem Gorden and Luecke
+
+\end{frame}
+
+\begin{frame}
+	\frametitle{Diagrammatic Invariant}
+
+
+\end{frame}
+
+\begin{frame}
+	\frametitle{Kauffman Bracket}
+
+
+
+\end{frame}
+
+\begin{frame}
+	\frametitle{Kauffman Bracket: An Example}
+
+
+
+\end{frame}
+
+\begin{frame}
+	\frametitle{Writhe of a Knot/Link}
+
+
+
+\end{frame}
+
+\begin{frame}
+	\frametitle{Hopf Link}
+
+
+
+\end{frame}
+
+\begin{frame}
+	\frametitle{Left Trefoil Knot}
+
+
+
+\end{frame}
+
+\begin{frame}
+	\frametitle{Right Trefoil Knot}
+
+
+
+\end{frame}
+
+\begin{frame}
+	\frametitle{Mirror Image}
+
+	\begin{theorem}
+		The Jones polynomial of the mirror image $\bar L$ of an oriented link $L$ is the conjugate under $t\leftrightarrow t^{-1}$ of the polynomial of $L$.
+	\end{theorem}
+	\p
+	\begin{proofs}
+		asd
+	\end{proofs}
+
+	Fail for palindromes
+\end{frame}
+
+\begin{frame}
+	\frametitle{Connected Sum}
+
+	% \begin{theorem}
+	% 	The Jones polynomial of the mirror image $\bar L$ of an oriented link $L$ is the conjugate under $t\leftrightarrow t^{-1}$ of the polynomial of $L$.
+	% \end{theorem}
+	% \p
+	% \begin{proofs}
+	% 	asd
+	% \end{proofs}
+
+	Fail for palindromes
+\end{frame}
+
+
+\begin{frame}
+	\frametitle{Yet Another Approach}
+
+	Skein Relation
+
+
+\end{frame}
+
+\begin{frame}
+	\frametitle{Yet Another Another Approach}
+
+	Skein Relation
+
+
+\end{frame}
+
+\begin{frame}
+	\frametitle{Yet More Approaches}
+
+	Skein Relation
+
+
+\end{frame}
+
+\begin{frame}
+	\frametitle{Conjecture}
+
+
+
+\end{frame}
+
+
+\begin{frame}
+	\frametitle{Coloured Jones Polynomials}
+
+	Whatever ite means
+
+
+
+\end{frame}
+
+\begin{frame}
+	\frametitle{Conjectures}
+
+	AJ Conjecture
+
+	Volume Conjecture
+
+
+
+\end{frame}
+
+
 
 \end{document}
