--- a/Talk.tex
+++ b/Talk.tex
@@ -81,10 +81,13 @@
 
 \begin{frame}[c]
 	\frametitle{Knot Equivalence}
-	\begin{center}
-		Two knots are equivalent if \\
-		or more rigorously, ambient isotopy
-	\end{center}
+	Two knots are \emph{equivalent} if one knot can be pushed about smoothly, without intersecting itself, to coincide with another knot. \\
+
+
+
+
+	Or more rigorously, defined by ambient isotopy or equivalently by an orientation-preserving homeomorphism of $S^3$ to itself
+
 \end{frame}
 
 \begin{frame}
