--- a/Talk.tex
+++ b/Talk.tex
@@ -23,6 +23,7 @@
 \usepackage{tabularx}
 \usetikzlibrary{positioning}
 \usepackage{xurl}
+\usepackage{animate}
 
 
 
@@ -83,6 +84,7 @@
 	\frametitle{Knot Equivalence}
 	Two knots are \emph{equivalent} if one knot can be pushed about smoothly, without intersecting itself, to coincide with another knot. \\
 
+	\animategraphics[loop,controls,width=5cm]{10}{pic/Knot_Unfolding-}{0}{50}
 
 
 
